# RB1-ImageOCR

./: README.md
ImageOCR/: CMakeLists.txt  image_ocr.cpp
doc/: RB1-ImageOCR-demo-doc.docx  Video_description.txt
res/: chinese_picture_output.txt  engilsh_picture_output.txt
